--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                                         <p>秋燕因從小患有腦性麻痺，所以外出都需要靠電動輪椅代步。以前完全沒有做過任何工作，她說自己試圖找過許多工作，但都沒公司要聘雇她，因為都是要熟悉電腦文書作業或是四肢健全的清潔工作，這些對平常人看似最基本的能力要求，對秋燕來說卻難如登天……</p>
                                     </div>
                                     <button class="moreBtn">
-                                        <a href="#">Read More</a>
+                                        <a href="story_allArea.html">Read More</a>
                                     </button>
                                 </li>
                                 <li>
@@ -187,7 +187,7 @@
                                         <p>最早以前，邱伯伯的第一份工作是在電器行，邊賣電器兼維修，後來就換到西藥原料工廠當員工，工廠之後遷到桃園工作，藥廠的工作一待就十五年了。邱伯伯在六十歲以前辦理提前退休，因為好像身體開始會對藥粉過敏，感覺那藥粉對身體很不好，所以才決定退休……</p>
                                     </div>
                                     <button class="moreBtn">
-                                        <a href="#">Read More</a>
+                                        <a href="story_allArea.html">Read More</a>
                                     </button>
                                 </li>
                             </ul>
@@ -202,7 +202,7 @@
                                         <p>在投入賣雜誌之前，高姐遇到販售員子承，子承就帶她到雜誌社初步瞭解工作內容，高姐就這樣開始從賣玉蘭花變成賣雜誌。平常早上除了賣玉蘭花，下午又多了一份賣雜誌的工作，這樣一來生活的收入開始有明顯的改善，之前僅靠賣玉蘭花，對高姐來說相當微薄……</p>
                                     </div>
                                     <button class="moreBtn">
-                                        <a href="#">Read More</a>
+                                        <a href="story_allArea.html">Read More</a>
                                     </button>
                                 </li>
                                 <li>
@@ -215,7 +215,7 @@
                                         <p>麗秋在旅遊業工作了十年之後，帶團出國真的很辛苦，身體要能應付時差的疲倦感，又要處理旅客的各種疑難雜症。後來，轉換跑道去美語補習班當美語老師，服務了一段時間，同時也在這時間點上，麗秋開始有失眠症狀，這症狀也逐日影響到她的教學工作⋯⋯</p>
                                     </div>
                                     <button class="moreBtn">
-                                        <a href="#">Read More</a>
+                                        <a href="story_allArea.html">Read More</a>
                                     </button>
                                 </li>
                             </ul>
@@ -230,7 +230,7 @@
                                         <p>因為一場從三樓墜落的工安意外導致陳大哥脊椎粉碎性骨折，目前仍在努力復健中，人生雖遭逢如此劇變，但陳大哥還是很樂觀的面對一切。手術後每天坐也坐不好，躺也躺不好。但是，脊椎損傷的關係，有很多工作都無法勝任……</p>
                                     </div>
                                     <button class="moreBtn">
-                                        <a href="#">Read More</a>
+                                        <a href="story_allArea.html">Read More</a>
                                     </button>
                                 </li>
                                 <li>
@@ -243,14 +243,14 @@
                                         <p>2016年宛純搬來亞葵小鎮生活，這裏是一個提供精神復健的場域，過去曾對人群恐慌，內心時時充滿負面情緒且感到焦慮，在老師的細心陪伴與支持下，她重新尋回正向、積極的自我，並努力找回重返社會的動能……</p>
                                     </div>
                                     <button class="moreBtn">
-                                        <a href="#">Read More</a>
+                                        <a href="story_allArea.html">Read More</a>
                                     </button>
                                 </li>
                             </ul>
                         </div>
                     </div>
                     <button class="moreBtn">
-                        <a href="#">更多銷售員故事</a>
+                        <a href="story_allArea.html">更多銷售員故事</a>
                     </button>
                 </section>
 
@@ -301,6 +301,47 @@
                     </div>
                 </section>
 
+                <section class="section supportBanner">
+                    <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/08fe1401eb595397ec4099686cdb7091cc6cae52/material/01-PC/05-support/sub-banner.svg" alt="">
+                </section>
+
+<!-- ------------------------------------------------------------------------------------------- -->
+
+                <section class="section support" id="supportId">
+                    <h2>支持訂閱</h2>
+                    <div class="supportContent">
+                        <div class="asideCommon">
+                            <img src="https://github.com/Soumeteor/the-big-iusse/blob/master/material/01-PC/05-support/s4SideTitle.png?raw=true" alt="Aside Title">
+                        </div>
+                        <div class="supportWay">
+                            <div class="supportTxt">
+                                <p>The Big Issue 雜誌致力於帶給社會上的弱勢族群，在社會上能夠獲得更多的生活主導權，並持續努力著推動這個行動。若您剛好對 The Big Issue 有興趣，在路上見到橘色背心的夥伴，請別吝於給他們一個微笑或是實質支持，對他們來說都是偌大的鼓勵唷！</p>
+                                <p>目前個人訂閱的部分尚未開放，我們希望能夠「將當期雜誌的銷售保留給街頭販售員」，謝謝您的支持。以下三種方案的支持訂閱方式，參考了世界各國的 The Big Issue 雜誌做法，供您選擇：</p>
+                            </div>
+                            <ol class="supportList">
+                                <h2>Subscription List</h2>
+                                <li>
+                                    <a href="#">
+                                        <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/08fe1401eb595397ec4099686cdb7091cc6cae52/material/01-PC/05-support/subscriptionA.svg" alt="">
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/08fe1401eb595397ec4099686cdb7091cc6cae52/material/01-PC/05-support/subscriptionB.svg" alt="">
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/08fe1401eb595397ec4099686cdb7091cc6cae52/material/01-PC/05-support/subscriptionC.svg" alt="">
+                                    </a>
+                                </li>
+                            </ol>
+                        </div>
+                    </div>
+                    <button class="moreBtn">
+                        <a href="#">我要訂閱</a>
+                    </button>
+                </section>
                 
             </div>
             
@@ -311,25 +352,25 @@
 
             <div class="asideBar">
                 <div class="asideLogo">
-                    <img src="https://github.com/Soumeteor/the-big-iusse/blob/master/material/logo/Nav_logo-01.png?raw=true" alt="Aside Big Issue Logo">
+                    <a href="index.html"><img src="https://github.com/Soumeteor/the-big-iusse/blob/master/material/logo/Nav_logo-01.png?raw=true" alt="Aside Big Issue Logo"></a>
                 </div>
                 <nav>
                     <h2>Aside Navigation</h2>
                     <ul class="asideNavBarList">
                         <li>
-                           <a href="#issueId">各期雜誌</a>
+                           <a href="#issueId"><span>各期雜誌</span></a>
                         </li>
                         <li>
-                            <a href="#salesId">銷售群像</a>
+                            <a href="#salesId"><span>銷售群像</span></a>
                         </li>
                         <li>
-                            <a href="#aboutId">關於大誌</a>
+                            <a href="#aboutId"><span>關於大誌</span></a>
                         </li>
                         <li>
-                            <a href="#">訂閱支持</a>
+                            <a href="#"><span>訂閱支持</span></a>
                         </li>
                         <li>
-                            <a href="#">販售場所</a>
+                            <a href="#"><span>販售場所</span></a>
                         </li>
                     </ul>
                 </nav>
