--- a/story_ HsinchuTrainStation.html
+++ b/story_ HsinchuTrainStation.html
@@ -168,8 +168,7 @@
 
         <div class="asideBar">
             <div class="asideLogo">
-                <img src="https://github.com/Soumeteor/the-big-iusse/blob/master/material/logo/Nav_logo-01.png?raw=true"
-                    alt="Aside Big Issue Logo">
+                <a href="index.html"><img src="https://github.com/Soumeteor/the-big-iusse/blob/master/material/logo/Nav_logo-01.png?raw=true" alt="Aside Big Issue Logo"></a>
             </div>
             <nav>
                 <h2>Aside Navigation</h2>
