--- a/story_ DouliuTrainStation.html
+++ b/story_ DouliuTrainStation.html
@@ -35,7 +35,7 @@
     <link rel="stylesheet" href="css/BigIssueAll.min.css">
 </head>
 
-<body>
+<body> 
 
     <div class="allContent">
         <div class="asideContent">
@@ -66,34 +66,27 @@
                         <div class="storyContent">
                             <ol class="storyBreadCrumb">
                                 <li>
-                                    <a
-                                        href="#"><span>HOME</span></a>
+                                    <a href="#"><span>HOME</span></a>
                                 </li>
                                 <li>
-                                    <i
-                                        class="fas fa-caret-right"></i>
+                                    <i class="fas fa-caret-right"></i>
                                 </li>
                                 <li>
-                                    <a
-                                        href="#"><span>銷售員群像</span></a>
+                                    <a href="#"><span>銷售員群像</span></a>
                                 </li>
                                 <li>
-                                    <i
-                                        class="fas fa-caret-right"></i>
+                                    <i class="fas fa-caret-right"></i>
                                 </li>
                                 <!-- 注意地區，地區不同也要改 -->
                                 <li>
-                                    <a
-                                        href="#"><span>中部地區</span></a>
+                                    <a href="#"><span>中部地區</span></a>
                                 </li>
                                 <li>
-                                    <i
-                                        class="fas fa-caret-right"></i>
+                                    <i class="fas fa-caret-right"></i>
                                 </li>
                                 <!-- 區域所在位置名稱 -->
                                 <li>
-                                    <a
-                                        href="#"><span>雲林斗六火車站</span></a>
+                                    <a href="#"><span>雲林斗六火車站</span></a>
                                 </li>
                             </ol>
                             <article>
@@ -170,8 +163,7 @@
 
         <div class="asideBar">
             <div class="asideLogo">
-                <img src="https://github.com/Soumeteor/the-big-iusse/blob/master/material/logo/Nav_logo-01.png?raw=true"
-                    alt="Aside Big Issue Logo">
+                <a href="index.html"><img src="https://github.com/Soumeteor/the-big-iusse/blob/master/material/logo/Nav_logo-01.png?raw=true" alt="Aside Big Issue Logo"></a>
             </div>
             <nav>
                 <h2>Aside Navigation</h2>
