--- a/story_TainanNCKU.html
+++ b/story_TainanNCKU.html
@@ -67,34 +67,27 @@ D
                         <div class="storyContent">
                             <ol class="storyBreadCrumb">
                                 <li>
-                                    <a
-                                        href="#"><span>HOME</span></a>
+                                    <a href="index.html"><span>HOME</span></a>
                                 </li>
                                 <li>
-                                    <i
-                                        class="fas fa-caret-right"></i>
+                                    <i class="fas fa-caret-right"></i>
                                 </li>
                                 <li>
-                                    <a
-                                        href="#"><span>銷售員群像</span></a>
+                                    <a href="#"><span>銷售員群像</span></a>
                                 </li>
                                 <li>
-                                    <i
-                                        class="fas fa-caret-right"></i>
+                                    <i class="fas fa-caret-right"></i>
                                 </li>
                                 <!-- 注意地區，地區不同也要改 -->
                                 <li>
-                                    <a
-                                        href="#"><span>南部地區</span></a>
+                                    <a href="story_southArea.html"><span>南部地區</span></a>
                                 </li>
                                 <li>
-                                    <i
-                                        class="fas fa-caret-right"></i>
+                                    <i class="fas fa-caret-right"></i>
                                 </li>
                                 <!-- 區域所在位置名稱 -->
                                 <li>
-                                    <a
-                                        href="#"><span>台南成大光復校區&台南應用科大</span></a>
+                                    <a href="story_TainanNCKU.html"><span>台南成大光復校區&台南應用科大</span></a>
                                 </li>
                             </ol>
                             <article>
@@ -174,8 +167,7 @@ D
 
         <div class="asideBar">
             <div class="asideLogo">
-                <img src="https://github.com/Soumeteor/the-big-iusse/blob/master/material/logo/Nav_logo-01.png?raw=true"
-                    alt="Aside Big Issue Logo">
+                <a href="index.html"><img src="https://github.com/Soumeteor/the-big-iusse/blob/master/material/logo/Nav_logo-01.png?raw=true" alt="Aside Big Issue Logo"></a>
             </div>
             <nav>
                 <h2>Aside Navigation</h2>
