--- a/story_TaipeiLongshanTemple.html
+++ b/story_TaipeiLongshanTemple.html
@@ -60,7 +60,7 @@
                         <div class="storyContent">
                             <ol class="storyBreadCrumb">
                                 <li>
-                                    <a href="#"><span>HOME</span></a>
+                                    <a href="index.html"><span>HOME</span></a>
                                 </li>
                                 <li>
                                     <i class="fas fa-caret-right"></i>
@@ -73,14 +73,14 @@
                                 </li>
                                 <!-- 注意地區，地區不同也要改 -->
                                 <li>
-                                    <a href="#"><span>北部地區</span></a>
+                                    <a href="story_northArea.html"><span>北部地區</span></a>
                                 </li>
                                 <li>
                                     <i class="fas fa-caret-right"></i>
                                 </li>
                                 <!-- 區域所在位置名稱 -->
                                 <li>
-                                    <a href="#"><span>台北捷運龍山寺站</span></a>
+                                    <a href="story_TaipeiLongshanTemple.html"><span>台北捷運龍山寺站</span></a>
                                 </li>
                             </ol>
                             <article>
@@ -147,8 +147,7 @@
 
         <div class="asideBar">
             <div class="asideLogo">
-                <img src="https://github.com/Soumeteor/the-big-iusse/blob/master/material/logo/Nav_logo-01.png?raw=true"
-                    alt="Aside Big Issue Logo">
+                <a href="index.html"><img src="https://github.com/Soumeteor/the-big-iusse/blob/master/material/logo/Nav_logo-01.png?raw=true" alt="Aside Big Issue Logo"></a>
             </div>
             <nav>
                 <h2>Aside Navigation</h2>
