--- a/story_eastArea.html
+++ b/story_eastArea.html
@@ -30,7 +30,7 @@
     <div class="allContent">
         <div class="asideContent">
             <header class="header">
-                <h1>Story</h1>
+                <h1>All Story</h1>
                 <div class="headerPic">
                     <img src="https://github.com/Soumeteor/the-big-iusse/blob/master/material/01-PC/03-story/NewPage_story-title-PC.png?raw=true" alt="Header Picture">
                 </div>
@@ -40,17 +40,23 @@
                     <div class="storyOfPeople">
                          <div class="asideCommon">
                             <ol class="storyAisdeMenu">
-                                <!-- a 連結要改 -->
                                 <li>
-                                    <a href="story_ HsinchuTrainStation.html">上一則</a>
+                                    <a href="story_allArea.html">全部地區</a>
                                 </li>
                                 <li>
-                                    <a href="story_TaichungEslite.html">本則</a>
+                                    <a href="story_northArea.html">北部地區</a>
                                 </li>
                                 <li>
-                                    <a href="story_TaicungYunTech.html">下一則</a>
+                                    <a href="story_centralArea.html">中部地區</a>
+                                </li>
+                                <li>
+                                    <a href="story_southArea.html">南部地區</a>
+                                </li>
+                                <li>
+                                    <a href="story_eastArea.html">東部地區</a>
                                 </li>
                             </ol>
+                                
                         </div>
                         <div class="storyContent">
                             <ol class="storyBreadCrumb">
@@ -68,43 +74,78 @@
                                 </li>
                                 <!-- 注意地區，地區不同也要改 -->
                                 <li>
-                                    <a href="story_centralArea.html"><span>中部地區</span></a>
-                                </li>
-                                <li>
-                                    <i class="fas fa-caret-right"></i>
-                                </li>
-                                <!-- 區域所在位置名稱 -->
-                                <li>
-                                    <a href="story_TaichungEslite.html"><span>勤美誠品</span></a>
+                                    <a href="story_eastArea.html"><span>東部地區</span></a>
                                 </li>
                             </ol>
-                            <article>
-                                <div class="storyArticle">
-                                    <div class="storyPicDescription">
-                                        <!-- 圖片要換，h3 要改 -->
-                                        <div class="storyPic">
-                                            <figure>
-                                                <img src="https://github.com/Soumeteor/the-big-iusse/blob/master/material/sales/sales_05.png?raw=true" alt="">
-                                                <figcaption>
-                                                    <h3>台中勤美誠品</h3>
-                                                </figcaption>
-                                            </figure>
+                            <ol class="selectArea">
+                                <li class="selectMenu">
+                                    選擇地區 <i class="fas fa-caret-down"></i>
+                                    <ol class="subSelectMenu">
+                                        <li>
+                                            <a href="story_allArea.html">所有地區</a>
+                                        </li>
+                                        <li>
+                                            <a href="story_northArea.html">北部地區</a>
+                                        </li>
+                                        <li>
+                                            <a href="story_centralArea.html">中部地區</a>
+                                        </li>
+                                        <li>
+                                            <a href="story_southArea.html">南部地區</a>
+                                        </li>
+                                        <li>
+                                            <a href="story_eastArea.html">東部地區</a>
+                                        </li>
+                                        <li>
+                                            <a href="story_otherArea.html">海外</a>
+                                        </li>
+                                    </ol>
+                                </li>
+                            </ol>
+                            <div class="eastStory">
+                                <ol class="eastStoryList">
+                                    <h2>North Area Story List</h2>
+                                    <li>
+                                        <div class="allStoryPic">
+                                            <img src="https://github.com/Soumeteor/the-big-iusse/blob/master/material/sales/sales_01.png?raw=true" alt="">
                                         </div>
-                                        <div class="picTxt">
-                                            <!-- 文字要改 -->
-                                            <p>「去年初，我從電視上看到大誌雜誌的介紹，覺得滿有趣的！原來可以這樣賣雜誌，我就請脊椎損傷協會的輔導職員幫忙問問看，剛好去年四月大誌雜誌也來台中了！我就去受訓，五月就開始在這邊賣雜誌，我還記得第一個月只賣出60本雜誌。」</p>
-                                            <p class="salesName">台中勤美誠品 / 陳大哥</p>
+                                        <div class="allStoryTxt">
+                                            <h3><span>台北捷運圓山站</span></h3>
+                                            <p class="subStoryTitle">「這工作，讓我可以真正地走到外面來接近人群，讓我可以不用一輩子跟家人伸手要錢，也可以不用一直賴在家裡。」</p>
+                                            <p>秋燕因從小患有腦性麻痺，所以外出都需要靠電動輪椅代步。以前完全沒有做過任何工作，她說自己試圖找過許多工作，但都沒公司要聘雇她，因為都是要熟悉電腦文書作業或是四肢健全的清潔工作，這些對平常人看似最基本的能力要求，對秋燕來說卻難如登天……</p>
+                                            <button class="moreBtn">
+                                                <a href="story_TaipeiYuanshan.html">看完整故事</a>
+                                            </button>
                                         </div>
-                                    </div>
-                                    <div class="storyTxtContent">
-                                        <!-- 段落文字要改 -->
-                                        <p>台中最優質的天然造景與現代建築融合的勤美誠品商場，陳大哥就在這一棟商場旁的露天停車場前的一個小角落販售雜誌，每天下午準時三點半到，約五點半或六點收工，他應該是所有販售員中營業時間最短的吧？「沒有啦，因為還要開這台輪椅過來，早上我會去公園做復健運動，下午兩點多整理準備一下東西，慢慢開過來也差不多三點多了，然後因為晚上六點過後中港路車子很多，滿危險的，所以五點半就要收工回家了！」陳大哥說。雖然販售的時間不長，但這一帶人潮很多，從去年五月開始販售雜誌到今天，陳大哥的販售成績還不錯！</p>
-                                        <p>陳大哥回憶說：「去年初，我從電視上看到大誌雜誌的介紹，覺得滿有趣的！原來可以這樣賣雜誌，我就請脊椎損傷協會的輔導職員幫忙問問看，那時候也都有幫忙找工作，不過都是打電腦的工作居多，但我對大誌雜誌比較感興趣，所以就想說試試看能不能找這個工作，剛好去年四月大誌雜誌也來台中了！我就去受訓，五月就開始在這邊賣雜誌，我還記得第一個月只賣出60本雜誌。」因為脊椎損傷的關係，有很多工作都無法勝任，陳大哥說之前也有考慮過賣口香糖、玉蘭花、刮刮樂等等，但是賣口香糖感覺都要依賴民眾的憐憫心， 賣玉蘭花要很早出門補貨，搬運與串花加工對他而言也不容易，賣刮刮樂又擔心如果全被搶走了也追不到，陳大哥想來想去還是覺得賣雜誌比較好，至少沒人會搶雜誌。</p>
-                                        <p>五年前因為一場從三樓墜落的工安意外導致陳大哥脊椎粉碎性骨折，目前仍在努力復健中，人生雖遭逢如此劇變，但陳大哥還是很樂觀的面對一切。「那時候手術完真的很痛苦，每天坐也坐不好，躺也躺不好，我還開玩笑說，乾脆從四樓再摔一次就解脫了！有一天，就請護士小姐推我到戶外，抽一根菸，兩根菸……到抽完第五根菸，我就又乖乖回去做復健，就這樣熬過來了，但日子總還是要過下去。」現在陳大哥每天早上就去公園作站立練習，每個月也都會定期回診，醫院的幾位醫生也都成了忠實讀者。陳大哥黝黑的膚色看起就是「坐不住」的人，如今雖然要一直坐在椅子上，但他仍然很主動積極的走向戶外，結交許多朋友。</p>
-                                        <p>每天雖然僅有販售三個多小時，但在這裡已經有許多忠實讀者都會定期跟他購買，在短短的訪談時間裡，就有幾位熟客路過跟他打招呼，還有一位中女中林同學偶爾也會來找陳大哥聊天！她說：「因為上學都會經過，每一期出刊都會買來看， 從創刊號在便利商店看到時就覺得很不錯，但後來僅有台北的街友有販售，現在終於在台中也能買到！每個月一定都會來跟陳大哥買。」這裡是台中最熱門的新興地點，每天人來人往，但陳大哥也沒有延長販售時間的打算，他覺得日子過的去就好了。在收工邊收拾書包的同時，還一邊跟下個月將參加指考的林同學叮嚀要認真準備考試，努力實踐自己的夢想。</p>
-                                    </div>
-                                </div>
-                            </article>
+                                    </li>
+                                    <li>
+                                        <div class="allStoryPic">
+                                            <img src="https://github.com/Soumeteor/the-big-iusse/blob/master/material/sales/sales_01.png?raw=true" alt="">
+                                        </div>
+                                        <div class="allStoryTxt">
+                                            <h3><span>台北捷運圓山站</span></h3>
+                                            <p class="subStoryTitle">「這工作，讓我可以真正地走到外面來接近人群，讓我可以不用一輩子跟家人伸手要錢，也可以不用一直賴在家裡。」</p>
+                                            <p>秋燕因從小患有腦性麻痺，所以外出都需要靠電動輪椅代步。以前完全沒有做過任何工作，她說自己試圖找過許多工作，但都沒公司要聘雇她，因為都是要熟悉電腦文書作業或是四肢健全的清潔工作，這些對平常人看似最基本的能力要求，對秋燕來說卻難如登天……</p>
+                                            <button class="moreBtn">
+                                                <a href="story_TaipeiYuanshan.html">看完整故事</a>
+                                            </button>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="allStoryPic">
+                                            <img src="https://github.com/Soumeteor/the-big-iusse/blob/master/material/sales/sales_01.png?raw=true" alt="">
+                                        </div>
+                                        <div class="allStoryTxt">
+                                            <h3><span>台北捷運圓山站</span></h3>
+                                            <p class="subStoryTitle">「這工作，讓我可以真正地走到外面來接近人群，讓我可以不用一輩子跟家人伸手要錢，也可以不用一直賴在家裡。」</p>
+                                            <p>秋燕因從小患有腦性麻痺，所以外出都需要靠電動輪椅代步。以前完全沒有做過任何工作，她說自己試圖找過許多工作，但都沒公司要聘雇她，因為都是要熟悉電腦文書作業或是四肢健全的清潔工作，這些對平常人看似最基本的能力要求，對秋燕來說卻難如登天……</p>
+                                            <button class="moreBtn">
+                                                <a href="story_TaipeiYuanshan.html">看完整故事</a>
+                                            </button>
+                                        </div>
+                                    </li>
+                                </ol>
+                            </div>
                         </div>
                     </div>
                 </section>
