--- a/story_TaichungEslite.html
+++ b/story_TaichungEslite.html
@@ -75,7 +75,7 @@
                                 </li>
                                 <!-- 區域所在位置名稱 -->
                                 <li>
-                                    <a href="story_TaichungEslite.html"><span>勤美誠品</span></a>
+                                    <a href="story_TaichungEslite.html"><span>台中勤美誠品</span></a>
                                 </li>
                             </ol>
                             <article>
