--- a/index.html
+++ b/index.html
@@ -48,14 +48,14 @@
                 </nav>
             </div>
             <div class="headerBanner">
-                <div class="impression">
-                    <img src="https://picsum.photos/480/600/?random=111">
+                <div class="impression animate__animated animate__fadeInLeft">
+                    <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/9296840f46f38487e9dd36fd6c496e7f7225be6d/material/01-PC/00-banner/banner%202.svg">
                 </div>
                 <div class="bannerTxt">
-                    <div class="logo">
-                        <img src="https://github.com/Soumeteor/the-big-iusse/blob/master/material/logo/LOGO-bk.png?raw=true" alt="Big Issue">
+                    <div class="logo animate__animated animate__slideInDown">
+                        <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/9296840f46f38487e9dd36fd6c496e7f7225be6d/material/01-PC/00-banner/LOGO%202.svg" alt="Big Issue">
                     </div>
-                    <p>Helping people helping themsevles</p>
+                    <!-- <p>Helping people helping themsevles</p> -->
                 </div>
             </div>
         </div>
@@ -77,25 +77,25 @@
                                 <div class="carousel-item active" data-interval="4000">
                                     <img class="showLightBox" src="https://github.com/Soumeteor/the-big-iusse/blob/master/material/magazine/Mag_2020_06_A.jpeg?raw=true" class="d-block w-100" alt="...">
                                     <div class="animate__animated animate__fadeInUp">
-                                        <img src="https://github.com/Soumeteor/the-big-iusse/blob/master/material/magazine/PC_section_01_Magzine_main_txt_6.png?raw=true">
+                                        <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/9296840f46f38487e9dd36fd6c496e7f7225be6d/material/magazine/section_01_Magzine_main_txt_PC-6.svg">
                                     </div>
                                 </div>
                                 <div class="carousel-item" data-interval="4000">
                                     <img class="showLightBox" src="https://github.com/Soumeteor/the-big-iusse/blob/master/material/magazine/Mag_2020_05.jpeg?raw=true" class="d-block w-100" alt="...">
                                     <div class="animate__animated animate__fadeInUp">
-                                        <img src="https://github.com/Soumeteor/the-big-iusse/blob/master/material/magazine/PC_section_01_Magzine_main_txt_5.png?raw=true">
+                                        <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/9296840f46f38487e9dd36fd6c496e7f7225be6d/material/magazine/section_01_Magzine_main_txt_PC-5.svg">
                                     </div>
                                 </div>
                                 <div class="carousel-item" data-interval="4000">
                                     <img class="showLightBox" src="https://github.com/Soumeteor/the-big-iusse/blob/master/material/magazine/Mag_2020_04.jpeg?raw=true" class="d-block w-100" alt="...">
                                     <div class="animate__animated animate__fadeInUp">
-                                        <img src="https://github.com/Soumeteor/the-big-iusse/blob/master/material/magazine/PC_section_01_Magzine_main_txt_4.png?raw=true">
+                                        <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/9296840f46f38487e9dd36fd6c496e7f7225be6d/material/magazine/section_01_Magzine_main_txt_PC-4.svg">
                                     </div>
                                 </div>
                                 <div class="carousel-item" data-interval="4000">
                                     <img class="showLightBox" src="https://github.com/Soumeteor/the-big-iusse/blob/master/material/magazine/Mag_2020_03.jpeg?raw=true" class="d-block w-100" alt="...">
                                     <div class="animate__animated animate__fadeInUp">
-                                        <img src="https://github.com/Soumeteor/the-big-iusse/blob/master/material/magazine/PC_section_01_Magzine_main_txt_3.png?raw=true">
+                                        <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/9296840f46f38487e9dd36fd6c496e7f7225be6d/material/magazine/section_01_Magzine_main_txt_PC-3.svg">
                                     </div>
                                 </div>
                             </div>
@@ -171,7 +171,7 @@
                                     <div class="storyTxt">
                                         <h3>台北捷運圓山站</h3>
                                         <p>「這工作，讓我可以真正地走到外面來接近人群，讓我可以不用一輩子跟家人伸手要錢，也可以不用一直賴在家裡。」</p>
-                                        <p>秋燕因從小患有腦性麻痺，所以外出都需要靠電動輪椅代步。以前完全沒有做過任何工作，她說自己試圖找過許多工作，但都沒公司要聘雇她，因為都是要熟悉電腦文書作業或是四肢健全的清潔工作，這些對平常人看似最基本的能力要求，對秋燕來說卻難如登天……</p>
+                                        <p>秋燕因從小患有腦性麻痺，所以外出都需要靠電動輪椅代步。以前完全沒有做過任何工作，她說自己試圖找過許多工作，但都沒公司要聘雇她，因為都是要熟悉電腦文書作業或是四肢健全的清潔工作，這些看似最基本的能力要求，對秋燕來說卻是難如登天……</p>
                                     </div>
                                     <button class="moreBtn">
                                         <a href="story_allArea.html">Read More</a>
@@ -183,8 +183,8 @@
                                     </div>
                                     <div class="storyTxt">
                                         <h3>台北捷運龍山寺站</h3>
-                                        <p>「有一天去萬華社會局時，在電梯裡看到大誌雜誌的說明會傳單，就想說去試試看好了，不然也一大把年紀了，根本不可能找到工作啊！」</p>
-                                        <p>最早以前，邱伯伯的第一份工作是在電器行，邊賣電器兼維修，後來就換到西藥原料工廠當員工，工廠之後遷到桃園工作，藥廠的工作一待就十五年了。邱伯伯在六十歲以前辦理提前退休，因為好像身體開始會對藥粉過敏，感覺那藥粉對身體很不好，所以才決定退休……</p>
+                                        <p>「有一天去萬華社會局時，在電梯裡看到大誌雜誌的說明會傳單，就想說去試試看好了，不然也一大把年紀了，很難找到工作啊！」</p>
+                                        <p>最早以前，邱伯伯的第一份工作是在電器行，邊賣電器兼維修，後來就換到西藥原料工廠當員工，工廠之後遷到桃園工作，藥廠的工作一待就十五年了。邱伯伯在六十歲以前辦理提前退休，因為好像身體開始會對藥粉過敏，感覺對身體不好，所以決定退休……</p>
                                     </div>
                                     <button class="moreBtn">
                                         <a href="story_allArea.html">Read More</a>
@@ -367,7 +367,7 @@
                             <a href="#aboutId"><span>關於大誌</span></a>
                         </li>
                         <li>
-                            <a href="#"><span>訂閱支持</span></a>
+                            <a href="#supportId"><span>訂閱支持</span></a>
                         </li>
                         <li>
                             <a href="#"><span>販售場所</span></a>
