--- a/story_TaichungEslite.html
+++ b/story_TaichungEslite.html
@@ -113,28 +113,30 @@
 
         <div class="asideBar">
             <div class="asideLogo">
-                <a href="index.html"><img src="https://github.com/Soumeteor/the-big-iusse/blob/master/material/logo/Nav_logo-01.png?raw=true" alt="Aside Big Issue Logo"></a>
+                <a href="index.html">
+                    <img src="https://github.com/Soumeteor/the-big-iusse/blob/master/material/logo/Nav_logo-01.png?raw=true" alt="Aside Big Issue Logo">
+                </a>
             </div>
             <nav>
                 <h2>Aside Navigation</h2>
                 <ul class="asideNavBarList">
                     <li>
-                       <a href="index.html#issueId">各期雜誌</a>
-                    </li>
-                        <li>
-                        <a href="index.html#salesId">銷售群像</a>
+                        <a href="#issueId"><span>各期雜誌</span></a>
                     </li>
                     <li>
-                        <a href="index.html#aboutId">關於大誌</a>
+                        <a href="#salesId"><span>銷售群像</span></a>
                     </li>
                     <li>
-                        <a href="#">訂閱支持</a>
+                        <a href="#aboutId"><span>關於大誌</span></a>
                     </li>
                     <li>
-                        <a href="#">販售場所</a>
+                        <a href="#"><span>訂閱支持</span></a>
                     </li>
-                </ul>
-            </nav>
+                    <li>
+                        <a href="#"><span>販售場所</span></a>
+                    </li>
+                    </ul>
+                </nav>
         </div>
     </div>
     <footer class="footer">
