--- a/story_allArea.html
+++ b/story_allArea.html
@@ -18,7 +18,7 @@
     <meta property="og:side_name" content="">
     <meta property="fb:app_id" content="">
 
-    <title>Story Taichung Eslite</title>
+    <title>All Story</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
     <link rel="stylesheet" href="css/reset.css">
@@ -231,29 +231,29 @@
         </div>
 
         <div class="asideBar">
-            <div class="asideLogo">
-                <a href="index.html"><img src="https://github.com/Soumeteor/the-big-iusse/blob/master/material/logo/Nav_logo-01.png?raw=true" alt="Aside Big Issue Logo"></a>
-            </div>
-            <nav>
-                <h2>Aside Navigation</h2>
-                <ul class="asideNavBarList">
-                    <li>
-                       <a href="index.html#issueId">各期雜誌</a>
-                    </li>
+                <div class="asideLogo">
+                    <a href="index.html"><img src="https://github.com/Soumeteor/the-big-iusse/blob/master/material/logo/Nav_logo-01.png?raw=true" alt="Aside Big Issue Logo"></a>
+                </div>
+                <nav>
+                    <h2>Aside Navigation</h2>
+                    <ul class="asideNavBarList">
                         <li>
-                        <a href="index.html#salesId">銷售群像</a>
-                    </li>
-                    <li>
-                        <a href="index.html#aboutId">關於大誌</a>
-                    </li>
-                    <li>
-                        <a href="#">訂閱支持</a>
-                    </li>
-                    <li>
-                        <a href="#">販售場所</a>
-                    </li>
-                </ul>
-            </nav>
+                           <a href="#issueId"><span>各期雜誌</span></a>
+                        </li>
+                        <li>
+                            <a href="#salesId"><span>銷售群像</span></a>
+                        </li>
+                        <li>
+                            <a href="#aboutId"><span>關於大誌</span></a>
+                        </li>
+                        <li>
+                            <a href="#"><span>訂閱支持</span></a>
+                        </li>
+                        <li>
+                            <a href="#"><span>販售場所</span></a>
+                        </li>
+                    </ul>
+                </nav>
         </div>
     </div>
     <footer class="footer">
