--- a/story_ HsinchuTrainStation.html
+++ b/story_ HsinchuTrainStation.html
@@ -66,34 +66,20 @@
                         <div class="storyContent">
                             <ol class="storyBreadCrumb">
                                 <li>
-                                    <a
-                                        href="#"><span>HOME</span></a>
+                                    <a href="#"><span>HOME</span></a>
                                 </li>
                                 <li>
-                                    <i
-                                        class="fas fa-caret-right"></i>
+                                    <i class="fas fa-caret-right"></i>
                                 </li>
                                 <li>
-                                    <a
-                                        href="#"><span>銷售員群像</span></a>
+                                    <a href="#"><span>北部地區</span></a>
                                 </li>
                                 <li>
-                                    <i
-                                        class="fas fa-caret-right"></i>
-                                </li>
-                                <!-- 注意地區，地區不同也要改 -->
-                                <li>
-                                    <a
-                                        href="#"><span>北部地區</span></a>
-                                </li>
-                                <li>
-                                    <i
-                                        class="fas fa-caret-right"></i>
+                                    <i class="fas fa-caret-right"></i>
                                 </li>
                                 <!-- 區域所在位置名稱 -->
                                 <li>
-                                    <a
-                                        href="#"><span>新竹火車站</span></a>
+                                    <a href="#"><span>新竹火車站</span></a>
                                 </li>
                             </ol>
                             <article>
