--- a/story_ KaohsiungCity.html
+++ b/story_ KaohsiungCity.html
@@ -67,25 +67,14 @@ D
                         <div class="storyContent">
                             <ol class="storyBreadCrumb">
                                 <li>
-                                    <a
-                                        href="#"><span>HOME</span></a>
+                                    <a href="#"><span>HOME</span></a>
                                 </li>
                                 <li>
                                     <i
                                         class="fas fa-caret-right"></i>
                                 </li>
                                 <li>
-                                    <a
-                                        href="#"><span>銷售員群像</span></a>
-                                </li>
-                                <li>
-                                    <i
-                                        class="fas fa-caret-right"></i>
-                                </li>
-                                <!-- 注意地區，地區不同也要改 -->
-                                <li>
-                                    <a
-                                        href="#"><span>南部地區</span></a>
+                                    <a href="#"><span>南部地區</span></a>
                                 </li>
                                 <li>
                                     <i
@@ -93,8 +82,7 @@ D
                                 </li>
                                 <!-- 區域所在位置名稱 -->
                                 <li>
-                                    <a
-                                        href="#"><span>高雄城市光廊&高醫大</span></a>
+                                    <a href="#"><span>高雄城市光廊&高醫大</span></a>
                                 </li>
                             </ol>
                             <article>
