--- a/story_TaichungEslite.html
+++ b/story_TaichungEslite.html
@@ -61,13 +61,6 @@
                                     <i class="fas fa-caret-right"></i>
                                 </li>
                                 <li>
-                                    <a href="#"><span>銷售員群像</span></a>
-                                </li>
-                                <li>
-                                    <i class="fas fa-caret-right"></i>
-                                </li>
-                                <!-- 注意地區，地區不同也要改 -->
-                                <li>
                                     <a href="story_centralArea.html"><span>中部地區</span></a>
                                 </li>
                                 <li>
@@ -75,7 +68,7 @@
                                 </li>
                                 <!-- 區域所在位置名稱 -->
                                 <li>
-                                    <a href="story_TaichungEslite.html"><span>台中勤美誠品</span></a>
+                                    <a href="story_TaichungEslite.html"><span>勤美誠品</span></a>
                                 </li>
                             </ol>
                             <article>
