--- a/story_centralArea.html
+++ b/story_centralArea.html
@@ -67,13 +67,6 @@
                                     <i class="fas fa-caret-right"></i>
                                 </li>
                                 <li>
-                                    <a href="story_allArea.html"><span>銷售員群像</span></a>
-                                </li>
-                                <li>
-                                    <i class="fas fa-caret-right"></i>
-                                </li>
-                                <!-- 注意地區，地區不同也要改 -->
-                                <li>
                                     <a href="story_northArea.html"><span>中部地區</span></a>
                                 </li>
                             </ol>
@@ -106,77 +99,41 @@
                                 <ol class="centralStoryList">
                                     <h2>North Area Story List</h2>
                                     <li>
-                                        <div
-                                            class="allStoryPic">
-                                            <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/master/material/sales/sales_05.png"
-                                                alt="">
+                                        <div class="allStoryPic">
+                                            <img src="https://github.com/Soumeteor/the-big-iusse/blob/master/material/sales/sales_01.png?raw=true" alt="">
                                         </div>
-                                        <div
-                                            class="allStoryTxt">
-                                            <h3><span>台中勤美誠品</span>
-                                            </h3>
-                                            <p
-                                                class="subStoryTitle">
-                                                「當時手術完真的很痛苦。有一天，就請護士小姐推我到戶外，抽完第五根菸，我就又乖乖回去做復健，日子總還是要過下去。」
-                                            </p>
-                                            <p>因為一場從三樓墜落的工安意外導致陳大哥脊椎粉碎性骨折，目前仍在努力復健中，人生雖遭逢如此劇變，但陳大哥還是很樂觀的面對一切。手術後每天坐也坐不好，躺也躺不好。但是，脊椎損傷的關係，有很多工作都無法勝任……
-                                            </p>
-                                            <button
-                                                class="moreBtn">
-                                                <a
-                                                    href="story_TaichungEslite.html">看完整故事</a>
+                                        <div class="allStoryTxt">
+                                            <h3><span>台北捷運圓山站</span></h3>
+                                            <p class="subStoryTitle">「這工作，讓我可以真正地走到外面來接近人群，讓我可以不用一輩子跟家人伸手要錢，也可以不用一直賴在家裡。」</p>
+                                            <p>秋燕因從小患有腦性麻痺，所以外出都需要靠電動輪椅代步。以前完全沒有做過任何工作，她說自己試圖找過許多工作，但都沒公司要聘雇她，因為都是要熟悉電腦文書作業或是四肢健全的清潔工作，這些對平常人看似最基本的能力要求，對秋燕來說卻難如登天……</p>
+                                            <button class="moreBtn">
+                                                <a href="story_TaipeiYuanshan.html">看完整故事</a>
                                             </button>
                                         </div>
                                     </li>
                                     <li>
-                                        <div
-                                            class="allStoryPic">
-                                            <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/master/material/sales/sales_06.png"
-                                                alt="">
+                                        <div class="allStoryPic">
+                                            <img src="https://github.com/Soumeteor/the-big-iusse/blob/master/material/sales/sales_01.png?raw=true" alt="">
                                         </div>
-                                        <div
-                                            class="allStoryTxt">
-                                            <h3><span>雲林科技大學</span>
-                                            </h3>
-                                            <p
-                                                class="subStoryTitle">
-                                                「以前有做過會計助理，也待過會計事務所，但這些工作的壓力大到我無法負荷。後來精
-                                                神狀況不好後，就完全無法勝任工作了。」
-                                            </p>
-                                            <p>2016年宛純搬來亞葵小鎮生活，亞葵小鎮是一個提供精神復健的場域，她試著重新調整自
-                                                己的心靈狀態。過去曾對人群恐慌，內心時時充滿負面情緒且感到焦慮，在康復中心老師
-                                                的細心陪伴與支持協助下，她重新尋回正向、積極的自我，並努力找回重返社會的動能
-                                                ……</p>
-                                            <button
-                                                class="moreBtn">
-                                                <a
-                                                    href="story_TaicungYunTech.html">看完整故事</a>
+                                        <div class="allStoryTxt">
+                                            <h3><span>台北捷運圓山站</span></h3>
+                                            <p class="subStoryTitle">「這工作，讓我可以真正地走到外面來接近人群，讓我可以不用一輩子跟家人伸手要錢，也可以不用一直賴在家裡。」</p>
+                                            <p>秋燕因從小患有腦性麻痺，所以外出都需要靠電動輪椅代步。以前完全沒有做過任何工作，她說自己試圖找過許多工作，但都沒公司要聘雇她，因為都是要熟悉電腦文書作業或是四肢健全的清潔工作，這些對平常人看似最基本的能力要求，對秋燕來說卻難如登天……</p>
+                                            <button class="moreBtn">
+                                                <a href="story_TaipeiYuanshan.html">看完整故事</a>
                                             </button>
                                         </div>
                                     </li>
                                     <li>
-                                        <div
-                                            class="allStoryPic">
-                                            <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/master/material/sales/sales_07.png"
-                                                alt="">
+                                        <div class="allStoryPic">
+                                            <img src="https://github.com/Soumeteor/the-big-iusse/blob/master/material/sales/sales_01.png?raw=true" alt="">
                                         </div>
-                                        <div
-                                            class="allStoryTxt">
-                                            <h3><span>雲林斗六火車站</span>
-                                            </h3>
-                                            <p
-                                                class="subStoryTitle">
-                                                「我有去參加職業訓練，受訓完雖然有去餐廳工作，但廚藝還無法勝任餐廳的要求，而且
-                                                工作壓力變大就很容易緊張焦慮⋯⋯」
-                                            </p>
-                                            <p>從2015年10月入住亞葵小鎮後就有許多的輔導課程，讓文興慢慢調整改善焦慮的症狀。隨
-                                                著病情的逐日穩定，也開始嘗試著再回到職場上工作。文興說目前賣雜誌這工作可以訓練
-                                                恆心與耐心，壓力不會像職場競爭那麼大，也可以幫助他接觸外面的社會……
-                                            </p>
-                                            <button
-                                                class="moreBtn">
-                                                <a
-                                                    href="story_ DouliuTrainStation.html">看完整故事</a>
+                                        <div class="allStoryTxt">
+                                            <h3><span>台北捷運圓山站</span></h3>
+                                            <p class="subStoryTitle">「這工作，讓我可以真正地走到外面來接近人群，讓我可以不用一輩子跟家人伸手要錢，也可以不用一直賴在家裡。」</p>
+                                            <p>秋燕因從小患有腦性麻痺，所以外出都需要靠電動輪椅代步。以前完全沒有做過任何工作，她說自己試圖找過許多工作，但都沒公司要聘雇她，因為都是要熟悉電腦文書作業或是四肢健全的清潔工作，這些對平常人看似最基本的能力要求，對秋燕來說卻難如登天……</p>
+                                            <button class="moreBtn">
+                                                <a href="story_TaipeiYuanshan.html">看完整故事</a>
                                             </button>
                                         </div>
                                     </li>
