--- a/story_southArea.html
+++ b/story_southArea.html
@@ -67,13 +67,6 @@
                                     <i class="fas fa-caret-right"></i>
                                 </li>
                                 <li>
-                                    <a href="story_allArea.html"><span>銷售員群像</span></a>
-                                </li>
-                                <li>
-                                    <i class="fas fa-caret-right"></i>
-                                </li>
-                                <!-- 注意地區，地區不同也要改 -->
-                                <li>
                                     <a href="story_southArea.html"><span>南部地區</span></a>
                                 </li>
                             </ol>
@@ -106,57 +99,41 @@
                                 <ol class="southStoryList">
                                     <h2>North Area Story List</h2>
                                     <li>
-                                        <div
-                                            class="allStoryPic">
-                                            <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/master/material/sales/sales_08.png"
-                                                alt="">
+                                        <div class="allStoryPic">
+                                            <img src="https://github.com/Soumeteor/the-big-iusse/blob/master/material/sales/sales_01.png?raw=true" alt="">
                                         </div>
-                                        <div
-                                            class="allStoryTxt">
-                                            <h3><span>台南成大光復校區&amp;台南應用科大</span>
-                                            </h3>
-                                            <p
-                                                class="subStoryTitle">
-                                                「我已經六十多歲了，真的很難找到合適的工作，我也試過當警衛保全，去實習到一半，
-                                                就被年輕人給取代了，被公司嫌太老。」
-                                            </p>
-                                            <p>Text
-                                                2012年年底前，朱大哥還在科技公司工作，職位與待遇都不錯，還有一個完整的家庭。但
-                                                某天因公司惡性倒閉，欠下巨額負債，當保證人的朱大哥，成了銀行唯一找得到的「負責
-                                                人」。原本完整的家庭，一夕崩壞，妻子帶著小孩離開他，走頭無路的朱大哥，最後流露
-                                                街頭……
-                                                New Page -
-                                                Text</p>
-                                            <button
-                                                class="moreBtn">
-                                                <a
-                                                    href="story_TainanNCKU.html">看完整故事</a>
+                                        <div class="allStoryTxt">
+                                            <h3><span>台北捷運圓山站</span></h3>
+                                            <p class="subStoryTitle">「這工作，讓我可以真正地走到外面來接近人群，讓我可以不用一輩子跟家人伸手要錢，也可以不用一直賴在家裡。」</p>
+                                            <p>秋燕因從小患有腦性麻痺，所以外出都需要靠電動輪椅代步。以前完全沒有做過任何工作，她說自己試圖找過許多工作，但都沒公司要聘雇她，因為都是要熟悉電腦文書作業或是四肢健全的清潔工作，這些對平常人看似最基本的能力要求，對秋燕來說卻難如登天……</p>
+                                            <button class="moreBtn">
+                                                <a href="story_TaipeiYuanshan.html">看完整故事</a>
                                             </button>
                                         </div>
                                     </li>
                                     <li>
-                                        <div
-                                            class="allStoryPic">
-                                            <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/master/material/sales/sales_09.png"
-                                                alt="">
+                                        <div class="allStoryPic">
+                                            <img src="https://github.com/Soumeteor/the-big-iusse/blob/master/material/sales/sales_01.png?raw=true" alt="">
                                         </div>
-                                        <div
-                                            class="allStoryTxt">
-                                            <h3><span>高雄城市光廊</span>
-                                            </h3>
-                                            <p
-                                                class="subStoryTitle">
-                                                「我的腳踏車後面綁一個大籃子，就四處去搜、去撿，好一點一天賺個兩、三百塊，但現
-                                                在不能擺攤，警察會趕人，房子也拆光沒東西撿了。」
-                                            </p>
-                                            <p>1989年左右，貴仔曾經在海上待過一段時間。回臺灣後，一直沒有找到穩定的工作，就在
-                                                公園一天度過一天。現在努力賣雜誌後生活有點改善，記得剛開始賣的前兩個月真的賣得
-                                                很不好，接著就越來越穩定了，最近終於租了一間月租兩千元的矮厝……
-                                            </p>
-                                            <button
-                                                class="moreBtn">
-                                                <a
-                                                    href="story_ KaohsiungCity.html">看完整故事</a>
+                                        <div class="allStoryTxt">
+                                            <h3><span>台北捷運圓山站</span></h3>
+                                            <p class="subStoryTitle">「這工作，讓我可以真正地走到外面來接近人群，讓我可以不用一輩子跟家人伸手要錢，也可以不用一直賴在家裡。」</p>
+                                            <p>秋燕因從小患有腦性麻痺，所以外出都需要靠電動輪椅代步。以前完全沒有做過任何工作，她說自己試圖找過許多工作，但都沒公司要聘雇她，因為都是要熟悉電腦文書作業或是四肢健全的清潔工作，這些對平常人看似最基本的能力要求，對秋燕來說卻難如登天……</p>
+                                            <button class="moreBtn">
+                                                <a href="story_TaipeiYuanshan.html">看完整故事</a>
+                                            </button>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="allStoryPic">
+                                            <img src="https://github.com/Soumeteor/the-big-iusse/blob/master/material/sales/sales_01.png?raw=true" alt="">
+                                        </div>
+                                        <div class="allStoryTxt">
+                                            <h3><span>台北捷運圓山站</span></h3>
+                                            <p class="subStoryTitle">「這工作，讓我可以真正地走到外面來接近人群，讓我可以不用一輩子跟家人伸手要錢，也可以不用一直賴在家裡。」</p>
+                                            <p>秋燕因從小患有腦性麻痺，所以外出都需要靠電動輪椅代步。以前完全沒有做過任何工作，她說自己試圖找過許多工作，但都沒公司要聘雇她，因為都是要熟悉電腦文書作業或是四肢健全的清潔工作，這些對平常人看似最基本的能力要求，對秋燕來說卻難如登天……</p>
+                                            <button class="moreBtn">
+                                                <a href="story_TaipeiYuanshan.html">看完整故事</a>
                                             </button>
                                         </div>
                                     </li>
