--- a/all_magazine.html
+++ b/all_magazine.html
@@ -100,10 +100,10 @@
                                     <h2>All Magazine List</h2>
                                     <li>
                                         <div class="magazinePic">
-                                            <img src="https://github.com/Soumeteor/the-big-iusse/blob/master/material/magazine/Mag_2020_06_A.jpeg?raw=true" alt="">
+                                            <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/master/material/magazine/Mag_2020_07.png" alt="">
                                         </div>
                                         <button class="moreBtn">
-                                            <a href="#">2020年6月</a>
+                                            <a href="#">2020年7月</a>
                                         </button>
                                     </li>
                                     <li>
@@ -111,7 +111,7 @@
                                             <img src="https://github.com/Soumeteor/the-big-iusse/blob/master/material/magazine/Mag_2020_05.jpeg?raw=true" alt="">
                                         </div>
                                         <button class="moreBtn">
-                                            <a href="#">2020年5月</a>
+                                            <a href="#">2020年6月</a>
                                         </button>
                                     </li>
                                     <li>
@@ -119,7 +119,7 @@
                                             <img src="https://github.com/Soumeteor/the-big-iusse/blob/master/material/magazine/Mag_2020_04.jpeg?raw=true" alt="">
                                         </div>
                                         <button class="moreBtn">
-                                            <a href="#">2020年4月</a>
+                                            <a href="#">2020年5月</a>
                                         </button>
                                     </li>
                                 </ol>
