--- a/all_magazine.html
+++ b/all_magazine.html
@@ -108,7 +108,7 @@
                                     </li>
                                     <li>
                                         <div class="magazinePic">
-                                            <img src="https://github.com/Soumeteor/the-big-iusse/blob/master/material/magazine/Mag_2020_05.jpeg?raw=true" alt="">
+                                            <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/master/material/magazine/Mag_2020_06-2.png" alt="">
                                         </div>
                                         <button class="moreBtn">
                                             <a href="#">2020年6月</a>
@@ -116,7 +116,7 @@
                                     </li>
                                     <li>
                                         <div class="magazinePic">
-                                            <img src="https://github.com/Soumeteor/the-big-iusse/blob/master/material/magazine/Mag_2020_04.jpeg?raw=true" alt="">
+                                            <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/master/material/magazine/Mag_2020_05.jpeg" alt="">
                                         </div>
                                         <button class="moreBtn">
                                             <a href="#">2020年5月</a>
@@ -127,37 +127,37 @@
                                     <h2>All Magazine List</h2>
                                     <li>
                                         <div class="magazinePic">
-                                            <img src="https://github.com/Soumeteor/the-big-iusse/blob/master/material/magazine/Mag_2020_06_A.jpeg?raw=true" alt="">
-                                        </div>
-                                        <button class="moreBtn">
-                                            <a href="#">2020年6月</a>
-                                        </button>
-                                    </li>
-                                    <li>
-                                        <div class="magazinePic">
-                                            <img src="https://github.com/Soumeteor/the-big-iusse/blob/master/material/magazine/Mag_2020_05.jpeg?raw=true" alt="">
-                                        </div>
-                                        <button class="moreBtn">
-                                            <a href="#">2020年5月</a>
-                                        </button>
-                                    </li>
-                                    <li>
-                                        <div class="magazinePic">
-                                            <img src="https://github.com/Soumeteor/the-big-iusse/blob/master/material/magazine/Mag_2020_04.jpeg?raw=true" alt="">
+                                            <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/master/material/magazine/Mag_2020_04.jpeg" alt="">
                                         </div>
                                         <button class="moreBtn">
                                             <a href="#">2020年4月</a>
                                         </button>
                                     </li>
+                                    <li>
+                                        <div class="magazinePic">
+                                            <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/master/material/magazine/Mag_2020_03.jpeg" alt="">
+                                        </div>
+                                        <button class="moreBtn">
+                                            <a href="#">2020年3月</a>
+                                        </button>
+                                    </li>
+                                    <li>
+                                        <div class="magazinePic">
+                                            <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/master/material/magazine/Mag_2020_02.png" alt="">
+                                        </div>
+                                        <button class="moreBtn">
+                                            <a href="#">2020年2月</a>
+                                        </button>
+                                    </li>
                                 </ol>
                                 <ol class="allMagazineList">
                                     <h2>All Magazine List</h2>
                                     <li>
                                         <div class="magazinePic">
-                                            <img src="https://github.com/Soumeteor/the-big-iusse/blob/master/material/magazine/Mag_2020_06_A.jpeg?raw=true" alt="">
+                                            <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/master/material/magazine/Mag_2020_01.png" alt="">
                                         </div>
                                         <button class="moreBtn">
-                                            <a href="#">2020年6月</a>
+                                            <a href="#">2020年1月</a>
                                         </button>
                                     </li>
                                     <li>
