--- a/all_magazine.html
+++ b/all_magazine.html
@@ -162,45 +162,18 @@
                                     </li>
                                     <li>
                                         <div class="magazinePic">
-                                            <img src="https://github.com/Soumeteor/the-big-iusse/blob/master/material/magazine/Mag_2020_05.jpeg?raw=true" alt="">
+                                            <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/master/material/magazine/Mag_2019_12.png" alt="">
                                         </div>
                                         <button class="moreBtn">
-                                            <a href="#">2020年5月</a>
+                                            <a href="#">2019年12月</a>
                                         </button>
                                     </li>
                                     <li>
                                         <div class="magazinePic">
-                                            <img src="https://github.com/Soumeteor/the-big-iusse/blob/master/material/magazine/Mag_2020_04.jpeg?raw=true" alt="">
+                                            <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/master/material/magazine/Mag_2019_11.png" alt="">
                                         </div>
                                         <button class="moreBtn">
-                                            <a href="#">2020年4月</a>
-                                        </button>
-                                    </li>
-                                </ol>
-                                <ol class="allMagazineList">
-                                    <h2>All Magazine List</h2>
-                                    <li>
-                                        <div class="magazinePic">
-                                            <img src="https://github.com/Soumeteor/the-big-iusse/blob/master/material/magazine/Mag_2020_06_A.jpeg?raw=true" alt="">
-                                        </div>
-                                        <button class="moreBtn">
-                                            <a href="#">2020年6月</a>
-                                        </button>
-                                    </li>
-                                    <li>
-                                        <div class="magazinePic">
-                                            <img src="https://github.com/Soumeteor/the-big-iusse/blob/master/material/magazine/Mag_2020_05.jpeg?raw=true" alt="">
-                                        </div>
-                                        <button class="moreBtn">
-                                            <a href="#">2020年5月</a>
-                                        </button>
-                                    </li>
-                                    <li>
-                                        <div class="magazinePic">
-                                            <img src="https://github.com/Soumeteor/the-big-iusse/blob/master/material/magazine/Mag_2020_04.jpeg?raw=true" alt="">
-                                        </div>
-                                        <button class="moreBtn">
-                                            <a href="#">2020年4月</a>
+                                            <a href="#">2019年11月</a>
                                         </button>
                                     </li>
                                 </ol>
@@ -208,10 +181,37 @@
                                     <h2>All Magazine List</h2>
                                     <li>
                                         <div class="magazinePic">
-                                            <img src="https://github.com/Soumeteor/the-big-iusse/blob/master/material/magazine/Mag_2020_06_A.jpeg?raw=true" alt="">
+                                            <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/master/material/magazine/Mag_2019_10.png" alt="">
                                         </div>
                                         <button class="moreBtn">
-                                            <a href="#">2020年6月</a>
+                                            <a href="#">2019年10月</a>
+                                        </button>
+                                    </li>
+                                    <li>
+                                        <div class="magazinePic">
+                                            <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/master/material/magazine/Mag_2019_09.png" alt="">
+                                        </div>
+                                        <button class="moreBtn">
+                                            <a href="#">2019年9月</a>
+                                        </button>
+                                    </li>
+                                    <li>
+                                        <div class="magazinePic">
+                                            <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/master/material/magazine/Mag_2019_08.png" alt="">
+                                        </div>
+                                        <button class="moreBtn">
+                                            <a href="#">2019年8月</a>
+                                        </button>
+                                    </li>
+                                </ol>
+                                <ol class="allMagazineList">
+                                    <h2>All Magazine List</h2>
+                                    <li>
+                                        <div class="magazinePic">
+                                            <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/master/material/magazine/Mag_2019_07.png" alt="">
+                                        </div>
+                                        <button class="moreBtn">
+                                            <a href="#">2019年7月</a>
                                         </button>
                                     </li>
                                     <li>
