--- a/all_magazine.html
+++ b/all_magazine.html
@@ -216,7 +216,7 @@
                                     </li>
                                     <li>
                                         <div class="magazinePic">
-                                            <img src="https://github.com/Soumeteor/the-big-iusse/blob/master/material/magazine/Mag_2020_05.jpeg?raw=true" alt="">
+                                            <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/master/material/magazine/Mag_other.png" alt="">
                                         </div>
                                         <button class="moreBtn">
                                             <a href="#">2019年6月</a>
@@ -235,7 +235,7 @@
                                     <h2>All Magazine List</h2>
                                     <li>
                                         <div class="magazinePic">
-                                            <img src="https://github.com/Soumeteor/the-big-iusse/blob/master/material/magazine/Mag_2020_06_A.jpeg?raw=true" alt="">
+                                            <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/master/material/magazine/Mag_other.png" alt="">
                                         </div>
                                         <button class="moreBtn">
                                             <a href="#">2019年4月</a>
